# windows_ros-groovy

./: README.md
_setups/: empy-3.1.win32.msi  winros-python-build-tools-0.2.2.win32.msi
_tutorials/: win_ros_groovy_Msvc Compiled SDK - ROS Wiki.htm  win_ros_groovy_Msvc Overlays - ROS Wiki-adding_sources.htm
opt/catkin/: .rosinstall  setup.bat
opt/catkin/common_msgs/.svn/: wc.db
opt/catkin/ros/.svn/: wc.db
opt/ros/groovy/x86/: _setup_util.py  env.bat
opt/ros/groovy/x86/lib/: actionlib.lib  cpp_common.lib  message_filters.lib  rosbag.lib  rosconsole.lib  roscpp.lib  roscpp_serialization.lib  roslib.lib  rospack.lib  rostime.lib  topic_tools.lib  xmlrpcpp.lib
opt/ros/groovy/x86/share/mingw_cross/: package.xml
opt/ros/groovy/x86/share/mingw_cross/cmake/: mingw_crossConfig.cmake
opt/ros/groovy/x86/share/msvc_runtime/: package.xml
opt/ros/groovy/x86/share/msvc_runtime/cmake/: msvc_runtimeConfig.cmake
opt/ros/groovy/x86/share/rosrun/: package.xml
opt/ros/groovy/x86/share/win_dateutil/: package.xml
opt/ros/groovy/x86/share/win_empy/: package.xml
opt/ros/groovy/x86/share/win_python_build_tools/: package.xml
opt/ros/groovy/x86/share/win_python_build_tools/cmake/: win_python_build_toolsConfig.cmake
opt/ros/groovy/x86/share/win_pyyaml/: package.xml
opt/ros/groovy/x86/share/win_pyyaml/cmake/: win_pyyamlConfig.cmake
opt/ros/groovy/x86/share/win_tinyxml/: package.xml
opt/ros/groovy/x86/share/win_tinyxml/cmake/: win_tinyxmlConfig.cmake
opt/ros/groovy/x86/share/winros_create_pkg/: package.xml
opt/ros/groovy/x86/share/winros_create_pkg/cmake/: winros_create_pkgConfig.cmake
opt/rosdeps/groovy/x86/: .cproject  .project
opt/rosdeps/groovy/x86/include/: tinyxml.h
opt/rosdeps/groovy/x86/lib/: Boost-debug.cmake  Boost.cmake  boost_date_time-vc-mt-1_47.lib  boost_date_time-vc-mt-gd-1_47.lib  boost_filesystem-vc-mt-1_47.lib  boost_filesystem-vc-mt-gd-1_47.lib  boost_graph-vc-mt-1_47.lib  boost_graph-vc-mt-gd-1_47.lib  boost_iostreams-vc-mt-1_47.lib  boost_iostreams-vc-mt-gd-1_47.lib  boost_math_c99-vc-mt-1_47.lib  boost_math_c99-vc-mt-gd-1_47.lib  boost_math_c99f-vc-mt-1_47.lib  boost_math_c99f-vc-mt-gd-1_47.lib  boost_math_c99l-vc-mt-1_47.lib  boost_math_c99l-vc-mt-gd-1_47.lib  boost_math_tr1-vc-mt-1_47.lib  boost_math_tr1-vc-mt-gd-1_47.lib  boost_math_tr1f-vc-mt-1_47.lib  boost_math_tr1f-vc-mt-gd-1_47.lib  boost_math_tr1l-vc-mt-1_47.lib  boost_math_tr1l-vc-mt-gd-1_47.lib  boost_prg_exec_monitor-vc-mt-1_47.lib  boost_prg_exec_monitor-vc-mt-gd-1_47.lib  boost_program_options-vc-mt-1_47.lib  boost_program_options-vc-mt-gd-1_47.lib  boost_python-vc-mt-1_47.lib  boost_python-vc-mt-gd-1_47.lib  boost_random-vc-mt-1_47.lib  boost_random-vc-mt-gd-1_47.lib  boost_regex-vc-mt-1_47.lib  boost_regex-vc-mt-gd-1_47.lib  boost_serialization-vc-mt-1_47.lib  boost_serialization-vc-mt-gd-1_47.lib  boost_signals-vc-mt-1_47.lib  boost_signals-vc-mt-gd-1_47.lib  boost_system-vc-mt-1_47.lib  boost_system-vc-mt-gd-1_47.lib  boost_thread-vc-mt-1_47.lib  boost_thread-vc-mt-gd-1_47.lib  (+10 more)
winros_groovy_setups/win_python_build_tools + dependencies/: PyYAML-3.10.win32-py2.7.msi  mercurial-2.1.1.win32.msi  python-dateutil-1.5.win32.msi
winros_groovy_tutorials/: 001 win_ros_groovy_Msvc Compiled SDK - ROS Wiki.htm  002 win_python_build_tools_groovy - ROS Wiki.htm  003 win_ros_groovy_Msvc Overlays - ROS Wiki.htm
work/ws/: config.cmake  setup.bat
work/ws/devel/: .catkin  .rosinstall  _setup_util.py  actionlib.exp  actionlib.lib  env.bat  setup.bat
work/ws/devel/include/actionlib/: TestAction.h  TestActionFeedback.h  TestRequestAction.h  TestRequestActionGoal.h  TestRequestResult.h
work/ws/devel/include/actionlib_msgs/: GoalStatusArray.h
work/ws/devel/include/diagnostic_msgs/: DiagnosticArray.h  DiagnosticStatus.h  SelfTest.h  SelfTestRequest.h
work/ws/devel/include/geometry_msgs/: Point32.h  PointStamped.h  Polygon.h  Pose.h  PoseWithCovariance.h  Quaternion.h  Transform.h  TwistStamped.h  TwistWithCovarianceStamped.h  Vector3Stamped.h
work/ws/devel/include/nav_msgs/: GetMap.h  GetMapAction.h  GetMapActionResult.h  GetMapGoal.h  GetMapRequest.h  GetMapResponse.h  GetMapResult.h  GetPlanRequest.h  OccupancyGrid.h
work/ws/devel/include/ros/: common.h
work/ws/devel/include/rosapi/: DeleteParam.h  DeleteParamRequest.h  DeleteParamResponse.h  GetParam.h  GetParamNames.h  GetParamNamesRequest.h  GetParamNamesResponse.h  GetParamRequest.h  GetParamResponse.h  GetTime.h  GetTimeRequest.h  GetTimeResponse.h  HasParam.h  HasParamRequest.h  HasParamResponse.h  MessageDetails.h  MessageDetailsRequest.h  MessageDetailsResponse.h  Nodes.h  NodesRequest.h  NodesResponse.h  Publishers.h  PublishersRequest.h  PublishersResponse.h  SearchParam.h  SearchParamRequest.h  SearchParamResponse.h  ServiceHost.h  ServiceHostRequest.h  ServiceHostResponse.h  ServiceNode.h  ServiceNodeRequest.h  ServiceNodeResponse.h  ServiceProviders.h  ServiceProvidersRequest.h  ServiceProvidersResponse.h  ServiceRequestDetails.h  ServiceRequestDetailsRequest.h  ServiceRequestDetailsResponse.h  ServiceResponseDetails.h  (+24 more)
work/ws/devel/include/rosbridge_library/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h  SendBytes.h  SendBytesRequest.h  SendBytesResponse.h  TestArrayRequest.h  TestArrayRequestRequest.h  TestArrayRequestResponse.h  TestChar.h  TestDurationArray.h  TestEmpty.h  TestEmptyRequest.h  TestEmptyResponse.h  TestHeader.h  TestHeaderArray.h  TestHeaderTwo.h  TestMultipleRequestFields.h  TestMultipleRequestFieldsRequest.h  TestMultipleRequestFieldsResponse.h  TestMultipleResponseFields.h  TestTimeArray.h  (+15 more)
work/ws/devel/lib/: cpp_common.exp  cpp_common.lib  message_filters.exp  message_filters.lib  rosbag.exp  rosbag.lib  rosconsole.exp  rosconsole.lib  roscpp.exp  roscpp.lib  roscpp_serialization.exp  roscpp_serialization.lib  roslib.exp  roslib.lib  rospack.exp  rospack.lib  rostime.exp  rostime.lib  topic_tools.exp  topic_tools.lib  xmlrpcpp.exp  xmlrpcpp.lib
work/ws/src/: .rosinstall  .rosinstall.bak
(+736 files in other folders)
