<package>
  <name>mingw_cross</name>
  <version>0.2.0</version>
  <description>
     Installer script for the mingw cross environment. This will install to /opt/mingw
     and immediately begin cross-compiling gcc, boost and qt. Other libraries can be added by
     simply cd'ing to /opt/mingw and running make for the desired target.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/mingw_cross</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <!-- 
    Todo: instructions here for rosdep installs below. If rosdep
    isn't working, you can do the following on ubuntu:
     
      sudo apt-get install mercurial xz-utils flex bison yasm 
      sudo apt-get install autoconf libtool intltool scons
   -->
  <build_depend>mercurial</build_depend>
  <build_depend>xz-utils</build_depend>
  <build_depend>flex</build_depend>
  <build_depend>bison</build_depend>
  <build_depend>yasm</build_depend>
  <build_depend>autoconf</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>intltool</build_depend>
  <build_depend>scons</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>


