<package>
  <name>msvc_runtime</name>
  <version>0.2.0</version>
  <description>
    Windows python scripts aren't recognised as executables, so alot of the ros
    build logic will fail when trying to call python scripts because they 
    utilise the bash logic at the top of the script.
     
    This remedies the problem by creating a batch script for each that calls
    the relevant python script.
    
    It also provides various other scripts, utilities, launchers and dependency
    targets for setting up the runtime.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/msvc_runtime</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>win_roscpp_tutorials</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rosout</build_depend> 
</package>

