<package>
  <name>win_dateutil</name>
  <version>0.2.0</version>
  <description>
    Scripts to help download, patch and compile python dateutil.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/win_dateutil</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>

