<package>
  <name>win_empy</name>
  <version>0.2.0</version>
  <description>
    Build script for python expressions module.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/win_empy</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>

