<package>
  <name>win_python_build_tools</name>
  <version>0.2.3</version>
  <description>
    Collects all the ros python build tools packages together in 
    one installer.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/win_python_build_tools</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  
  <!-- custom built dependencies -->
  <build_depend>win_dateutil</build_depend>
  <build_depend>win_pymercurial</build_depend>
  <build_depend>win_pyyaml</build_depend>

  <!-- rosdeps -->
  <build_depend>python</build_depend>
  <build_depend>python-setuptools</build_depend>
  <build_depend>python-win32</build_depend>
  <build_depend>pysvn</build_depend>
  
</package>