<package>
  <name>win_pyyaml</name>
  <version>0.2.0</version>
  <description>
    Build script for python yaml parser.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/win_pyyaml</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
